# logos

./: .env.example  .gitignore  .zenodo.json  CITATION.cff  CLAUDE.md  DESIGN.md  LICENSE  Makefile  README.md  pyproject.toml
docs/: OPERATOR-AFK.md  damos-courtesy-email-DRAFT.md  data-provenance.md  english-is-semitic-demo.md  linear-a-claims-2026.md  prereg-morphology-2026-06-30.md  prereg-morphology-salgarella-addendum-2026-06-30.md  prereg-morphology-stratification-addendum-2026-06-30.md  references.md  scope-freeze-2026-06-30.md  sigla_decode.md  worktree-layout.md
governance/: AMENDMENT-001-v1-to-v2.md  AMENDMENT-002-v2.0-to-v2.1.md  AMENDMENT-003-v2.1-to-v2.2.md  AMENDMENT-004-v2.2-to-v2.3.md  CONSTITUTION-v2.0.md  CONSTITUTION.md  CONSTITUTION_SELF_AUDIT.md  IMPLEMENTATION_BACKLOG.md  README.md  RETROACTIVE_COMPLIANCE.md  assumption_register.json  source_dependency_graph.json  transfer_licences.json
paper/: SUBMISSION_NOTES.md
results/: ablation_T1.json  gate_null_calibration.json  lfake_canary.json  linb_morphology_control.json  null_compare_T2.json  t2b_syllabic_fdr.json
schema/: migration_2026-07-01_verdict_gate.sql  migration_2026-07-07_verdicts_append_only.sql  schema.sql
scripts/: assumption_gate.py  build_paper.sh  corpus_info.py  corpus_io.py  corpus_io_structured.py  effective_n.py  epoch_runner.py  family_scores.py  fetch_damos.py  fetch_ugaritic.py  gate_null_calibration.py  info_budget.py  licence_gate.py  logos_db.py  logos_stats.py  predict.py  search_receipt.py  sigla_decode.py  source_dependency.py  stage_header.py  sweep_ablation_t1_t2.py  verdict.py  zai_agent.py
tests/: test_ablation.py  test_comparison.py  test_comparison_canary.py  test_cross_script.py  test_decipher.py  (+25 more)
(+2071 files in other folders)
